# ChangeLog for mail-filter/spamassassin-botnet
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-filter/spamassassin-botnet/ChangeLog,v 1.5 2013/09/01 17:02:25 idella4 Exp $

*spamassassin-botnet-0.8-r1 (01 Sep 2013)

  01 Sep 2013; Ian Delaney <idella4@gentoo.org>
  +spamassassin-botnet-0.8-r1.ebuild, -spamassassin-botnet-0.8.ebuild:
  revbump -> EAPI5, remove old

  17 Jun 2012; Agostino Sarubbo <ago@gentoo.org>
  -spamassassin-botnet-0.7.ebuild:
  Remove old

*spamassassin-botnet-0.8 (29 Aug 2007)

  29 Aug 2007; Patrick McLean <chutzpah@gentoo.org>
  +spamassassin-botnet-0.8.ebuild:
  Version bump.

  24 Feb 2007; Raúl Porcel <armin76@gentoo.org>
  spamassassin-botnet-0.7.ebuild:
  Add ~x86 keyword wrt bug 168153

*spamassassin-botnet-0.7 (23 Feb 2007)

  23 Feb 2007; Patrick McLean <chutzpah@gentoo.org> +metadata.xml,
  +spamassassin-botnet-0.7.ebuild:
  Initial import.