@@ -2,13 +2,25 @@
 Hash: SHA256
 
 DIST Botnet-0.8.tar 81920 SHA256 f07cef396302e07cdbbdd2289d4433cde661973eeae5095d94dbff361b414c0b SHA512 4108efab3062a7e35cb008875d438cd079aa46ab829b5b172463f70537efa6dee41a0226df3a63392f31ae0e2042c851e9585a408b65bab94cb7400a4d9034bb WHIRLPOOL 04ffbeeb71d69b36f222eeebfa40cb08edfc02c9b08e99f47556f1077f82bebed4f5df0baab9de8cffb0368d5d9e4d0ef3f30e5b9a10cc5a2ef39a37e52bdd75
-EBUILD spamassassin-botnet-0.8-r1.ebuild 1224 SHA256 357f0606eaa0c9bbf0b8af58cd5a97441b6bece6d3245d44ac2328c8150e8dfb SHA512 8f04ba6639dee59205309a5cc250961e5f00dab952ffda8f33f619abbd15b24fe0237dfc8e963be91fe5429f2a4580ffdd15103bab6df8ac90f05c7588125485 WHIRLPOOL aad445930d9f587701af6a600a5579a5293e7035bc5a854ed3eea0327fca1c67dbfb729392841e586e90897cebf67ac3c205da60eaa63ef9284bcff74ace72c9
-MISC ChangeLog 950 SHA256 113f263658ca3ad4350c64f39f58377264f53b876e4d2596571f8aac4ea35ad7 SHA512 f71a2d68dfc6aa35877e0fcf46d46fedaef03156429cb63b85bc3f8b89408ec5665702f8aaa2b52509d4bf81b619b97340a590636913b9f30fed29922127f20e WHIRLPOOL 21d26847932b952ef0ccb8fa7b5bed9a904d58461349d5287254cee9646a717c1ae1bb8398e24be7fb0a12fe9442012eb481e3ad386d009f067b4e28de383df0
+EBUILD spamassassin-botnet-0.8-r1.ebuild 1234 SHA256 a48eb1ee75b78dd37f7476c114f52a4abf6bd10fcb86ea6d64811f13df76ef82 SHA512 ae4bd3fa993392129b48808d68ee6b41c970f6de5d0ebf352586c19e0e5e14daac0e3a5a4d01c877bc5d6780c69773ef440e5f859bd87f6ed0e09f45e16f0453 WHIRLPOOL db4869ac58fe9422df65616913c331982979dc77f0a0ea752b8e18b8889d8c6e43c81ad567d097833bc4507221a60f6ed11fd0b50628e60dc8f110aecf21ba9d
+MISC ChangeLog 1088 SHA256 1093c5625900488d8d373563ac858228bbd6e943d3020df0bc6d279796e08f9b SHA512 e9549a101e2ceff436f3247cbe383cfbc239b4b0c6a44aace9d43d66e51198054fc5861ea719729e6be81ea2a0c41e17a29f94921d55e4d9f869cd982956a98b WHIRLPOOL 58f0fdd110518d26024aa973d061cf7b9a486433ccd03bdcaa6a9bd4eca9bd0265e49c63f134d5d8494f91fafa0ee789782b829b23a8e570f0f42ee7fe607f55
 MISC metadata.xml 617 SHA256 e5e7828bacd7de18a234ae093176ee22bed0310c4b42449a5d23f89d17b4139d SHA512 51be29887389545681b67cacfca7f4eef91c20bdab3585083a1d85699f493c59605d680b8b0e4898dccc5c5154020ca1b846b80ef1448893b3012fb23a401421 WHIRLPOOL 9cb5e11451a2c3093b29959ca18377fad0aec2b2ecc75a034088c901ed6aa29707156b50d0b1f93a988896bac522e0da7b63c8f2a84492663bf9ca9171bf7109
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0
 
-iEYEAREIAAYFAlIjcycACgkQso7CE7gHKw1qCwCfVXJyMxgPrS87KBjZThykooth
-LlAAnAsW90QR9ETPRKHGwnhyFFap5+kX
-=CwMk
+iQJ8BAEBCABmBQJUX+hVXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
+QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOcvKUP/3oqY+IKWWYFywOKzzzKWKkx
+qm+MwCoEE5PGjii0Lolpqw1qJjq6gLVvH9MaZQgq4NQXTtX+jOmNOaeT+OXysloM
+I2nYYf+PQJHH6TEIcha+uxrpGGrOSYR1dYGd6ahR6evbYOHD81OmAU6utVnHdCpq
+yfFDXLBw/oXsvRPEBZUopxNbC2WJlmpTX+TpTns60HAhqSgeZ2DFFvDzAtQbV7r9
+u2nmTnhoGt79v4w1VIO8qb/58jso0kWQvAKg1BOtFl/Q5O5whyZyqtP7f/BSwVR5
+a2mVE7Z6mDAXKqPA87uCs5qjWq61Wsci+NTnOIgI6zxiJ7gF9Cx/4sTJnpQNkgR8
+NVH5h7gl+IOJhOcPsARQNozkQG6zVX42kBBA7Kczbj7ZtL4sRM54nBHd5m7qVaYe
+yoWpUmB/n6SKIt2BE+7TqzQXbRexXmQZ3ER44cec4YETAQUDHtRvFAH1e+eAVx6w
+UiYBwxCpDfurCSKOdsMJ+jc+GH7HXUDTHII2vKcwYf6pyvCLNWC7VcUaMbdudFE8
+/1KXwQuk9E9lKsr+jqi8arG4FtShbR6DtXmHJRcn12IH9rY9mEXL/firZUpCMFd7
+qCpMLdtHCyrtnpW555HmYdi53319kvI4ZhHdnwrmkLp4WWqFYS7NAD8jZnu+/U0x
+n3lF9x5cn455ZVwCfipt
+=GnOE
 -----END PGP SIGNATURE-----
