@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/spamassassin-botnet/spamassassin-botnet-0.8-r1.ebuild,v 1.1 2013/09/01 17:02:25 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/spamassassin-botnet/spamassassin-botnet-0.8-r1.ebuild,v 1.2 2014/11/09 22:19:00 dilfridge Exp $
 
 EAPI=5
 
@@ -29,7 +29,7 @@ src_compile() {
 }
 
 src_install() {
-	perlinfo
+	perl_set_version
 
 	local plugin_dir=${VENDOR_LIB}/Mail/SpamAssassin/Plugin
 
