@@ -9,16 +9,26 @@ AUX spamassassin-fuzzyocr-3.6.0-fix_falsepositives.patch 509 SHA256 68066c3b509d
 AUX spamassassin-fuzzyocr-3.6.0-fix_tesseract.patch 1054 SHA256 af1095f8a885eadd46d28e59cc8a4c279d68377fcd1dcd2236dfd0bd79960853 SHA512 3a687000782795b1b9eca23da91ea93aa6807e4c10c1d454eac1364880714f5f4efbf2f94ecdd5af2256bcd11efd9ed6008ba9e6f25eeac519ba641ac827fecd WHIRLPOOL b78a1ea333530bebb17114bb9dc23d6d70c2f04ca652419783950569e6f82b1aba5909f1f7fd2500cf049c0f87e598b9129f7335f1ba8c59f613547dea1123ba
 AUX spamassassin-fuzzyocr-3.6.0-fix_tmpdir.patch 2104 SHA256 987dadbcd0e85417d363afdd9f8b78baf53b237f2ead34e54d30908cae9d0167 SHA512 a90021f34362c2b901d6655c20f7683b5b77385fd1390c789019b233471753cd595d370c50cbe38f5d1820ac1f6bb1a743c0b1d7cdbc32feaae0b97ce86f48e7 WHIRLPOOL 2b3af9ea9d434c7fedbd418c6dc2d084b4de48a0378c87bc6ee64f3e592d74dedab3c604940eb36f1b223eb380215b5f0cbf9b61bd76d088398d4712bb152cc1
 AUX spamassassin-fuzzyocr-3.6.0-untaint_ocr_helper.patch 1771 SHA256 49a90c5be418909232055e73913eb21db3a8d5a4cb1a86c7004611c23dc510b2 SHA512 6d530de0dcdaab4bec60eeb3b4e56e6d491875c3898a9d93a48393828a3de7a6499a71e56d38f8d478518bf7688a7d5b3570d7fa88f75c3b4eacd573b2c8af91 WHIRLPOOL 94f909ea551d55e8e9eb4b3a9edccdf263d79c957bd6c136ffc31232f689ec55d33521bfa00dc68c551ee0be97daf016bd8f5aec848198fd24a79f12852cdf93
-DIST fuzzyocr-3.6.0.tar.gz 127103 SHA256 dd345c9500c3c3cdc33503863fe234bf3c2720c54b303e6cbc94dbe8aaf3a218
-EBUILD spamassassin-fuzzyocr-3.6.0-r2.ebuild 5524 SHA256 df8bc2914df8b9bd2b11a7432c181a589ad01cea65a7b5c6b1ae69c260303806 SHA512 dae238ac4ef14034cf29dbd92891ec7ce4c9bbc5184882f56e993569f33b3089015f639bdbbd9b112267822cd9f51007518dbac2ff9f8fe02f7575ba110d6132 WHIRLPOOL e7aef2c699f79889b90a366a07043ab1ad7eab63ac494f45b4a1a7a1b0bcd45c5a99b0265f55508f66d6f320aaaa16c41cec299355e885b5bd5205255abc2fc2
-MISC ChangeLog 4928 SHA256 ca7b2a55da31868b10dae630c505eed74be4c0b116cad54b6e2f004d4192d0fb SHA512 31c51bf634dd505738d0b1cfbd893d36eaab91388140f2760cecb6c655c6ae5567311b44dccd8194671b65cfae2442a26dd3d6e8116b2806bb9a5114998139b4 WHIRLPOOL e2423cc98cedfa1e6e77bd6e4bdbe2aff4ca3f336cd357fa4b23985795656d37be0299c7b4a2bb3df22d32c2683aa0c2445b11a231e9a944f8dbb6e69262be18
+DIST fuzzyocr-3.6.0.tar.gz 127103 SHA256 dd345c9500c3c3cdc33503863fe234bf3c2720c54b303e6cbc94dbe8aaf3a218 SHA512 f863cba997dc86fcb7416799c0bd7e9e1ed261e01d7e4274560ce9777b257da7ca4407ab21d8c485707be7e8e353795586830b34881e52309518ff46dd7549cc WHIRLPOOL bddbbbbc201667407cb6eb60a4ef395fd91bccc3cd804fbc65807d2bfa3c1672f8d08779f7cf3fc79b3c5215c324f939573b2c1162226a6dfe0dc6f4d0a688f3
+EBUILD spamassassin-fuzzyocr-3.6.0-r2.ebuild 5534 SHA256 7f5530c3a12ca09810bc6017c82367fc2400e34d2f76c0fd9213abc583474ca6 SHA512 7a32d34d3bf1842db51e50f6346dc315f5b36fd29d6521dd09f5f63a81bdfe78d780771e0cf813a50cad90c2adf3b6e912dc3f82aee350141c1d59ba23bc225b WHIRLPOOL 4192084535cee784c96afefc86fe575bddd4c3db997fcb7505bb513311c93a260293c939e4d82e5f20f57ebde4527b541c8e351c776c6c0e835d626e310fa1db
+MISC ChangeLog 5070 SHA256 3f5bfd6e9d8e1fdbfec1fb590f4b2d1d2ae30d5f6cd425564ff4156f62ee6c9c SHA512 dc3356986b755f3a5e39d6eaaac6a1cf66c6ef1b272ccf600841b6647cbe5c1a19e2986f48540327b327b61b2f24b213a068ccee8bea9a87284b4baf3717c582 WHIRLPOOL d626973d121e927a427e523e1e59fd64a98ea9f9b593248a3f2f21c58d5e12756c201a324d3ac6bd2aed7796cc74d28a0d39df69a48f1d3c828cfb6805ce384e
 MISC metadata.xml 1030 SHA256 3d5a2e27157d43b4ece4bcde12fd06aaaa11a724b2167cb8f2cb029c78f5b388 SHA512 3ad0bd3d8bde6bca715335e8ec4d17c674d78eddf54edf12b1a8c67007b0584f202d4442ef741c7be7d6047a16389e4be9e5eea074bedd7ca30fedc6183ec471 WHIRLPOOL 5ed06bcd1208163cc893a78b4f2394ebfc2046b011b37a47b30e24dd8b9f8b2d24c912be95f044825c66d5a16bcc674a0228397f5c6df256fac6135df2fdeac8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iJwEAQEIAAYFAlPf8CUACgkQG9wOWsQutdbU7QQArm7KotxYk/2fxCm2D6iBR9YD
-q56qTH4By9D5hlouZIu2K1GW3FI8QgCqJ01iFDxRlX/UkhPZiLlCaDy9pyopzuyB
-tqXKy5aFe3YZuAJqYC01USANSGu4xh6Y677kkE10i5jjABHdPE1sSVMYBNY27W70
-wPXxZKbVhDKojS82ihk=
-=CstS
+iQJ8BAEBCABmBQJUX+iSXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
+QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOcsTwP/3j+z0Q2zbBQvJSszJYfYDia
+fK1VIkfFr8/Ii62qa6b4OnXyhy9j15UXbEiF75mlBOYUr0mpQiJbTzfW4QjzNqAI
+pq43YuapsRzRoxtOAPVcTLR2ruRK7FYKr4DE5mLpSJvaqBOWj+vs+uAJ2MBRqgBj
+d6aqZqp6hsT1YiIWxUIkaNuy2dSGHgMBwyIAiaayzj/vUgrvW6EkrX6zHHInSZHh
+XQd2RBsEJjlKSaTDf2Qg4YICoIpErq8ho7iMS+5gr416OFYnE0JvZnFu0RJwGkKS
+jPnHVSWMr30tbR3TGeQatwJluQL2aiCZm5WMas16uFdi37YpJv38mAMt2PfWzmhT
+p+iw5e3Hbw2YpO/D0YREVHw+8vs+S3Ifnr1ijyEOXu+uX54XvfrzCEcnhTiN3bKg
+k1hxAHuk+5K1W2FFxBRkW81mVIkQI2aV63f2sNEwpBT921u0hMm7Xt+PVpwC5bon
++ZQ3M28UB7Clz3sYT5avBjI7at70wBfycP+urn/Xr6jcwBy70ccqcPUuSpfN9Rh2
+REk0X57Am75nMd2ez4QDcES64It/GxuoH2rfVgU5lh/Tq3qJMtip5HroaNwxDT74
+i3Y8Ou6KzIGXsJS8FiGQNVxnsVgJT32hx0xPjXaaubZABRXoWa39ypxRvx20TvMA
+jrE8ABuThM70nqEcjSVk
+=r3zf
 -----END PGP SIGNATURE-----
