@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/spamassassin-fuzzyocr/spamassassin-fuzzyocr-3.6.0-r2.ebuild,v 1.4 2014/08/04 20:37:02 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/spamassassin-fuzzyocr/spamassassin-fuzzyocr-3.6.0-r2.ebuild,v 1.5 2014/11/09 22:20:01 dilfridge Exp $
 
 EAPI=5
 inherit perl-module eutils user
@@ -76,7 +76,7 @@ src_prepare() {
 
 src_install() {
 		# called to get ${VENDOR_LIB}
-		perlinfo
+		perl_set_version
 
 		local plugin_dir=${VENDOR_LIB}/Mail/SpamAssassin/Plugin
 
