@@ -1,6 +1,10 @@
 # ChangeLog for mail-filter/spamassassin-botnet
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/spamassassin-botnet/ChangeLog,v 1.5 2013/09/01 17:02:25 idella4 Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/spamassassin-botnet/ChangeLog,v 1.6 2014/11/09 22:19:00 dilfridge Exp $
+
+  09 Nov 2014; Andreas K. Huettel <dilfridge@gentoo.org>
+  spamassassin-botnet-0.8-r1.ebuild:
+  Replace perlinfo with perl_set_version
 
 *spamassassin-botnet-0.8-r1 (01 Sep 2013)
 
